<resources>
    <string name="app_name">WinePMA</string>
    <string name="title_type_of_wine">Wine search</string>
    <string name="title_pair_food_to_wine">Food</string>
    <string name="title_pair_wine_to_food">Wine</string>
    <string name="title_history">History</string>
    <string name="title_about_us">AboutUs</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="thumbnail">thumbnail</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>